# Project_2.Job_search

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: api_hh.py  job_filter.py  saving_json.py  utils.py
tests/: conftest.py  test_job_filter.py  test_saving_json.py
